Corrections and better explanations
Signed-off-by: Riccardo Finotello <riccardo.finotello@gmail.com>

--- a/report.tex
+++ b/report.tex
@@ -34,6 +34,8 @@
 \newcommand{\sft}{\textsc{sft}\xspace}
 \newcommand{\ml}{\textsc{ml}\xspace}
 \newcommand{\eda}{\textsc{eda}\xspace}
+\newcommand{\pca}{\textsc{pca}\xspace}
+\newcommand{\svd}{\textsc{svd}\xspace}
 \newcommand{\wzw}{\textsc{WZW}\xspace}
 \newcommand{\dof}{d.o.f.\xspace}
 \newcommand{\mse}{\textsc{mse}\xspace}
@@ -50,9 +52,8 @@
 
 \begin{abstract}
 
-  In the framework of open String Field Theory (\sft), we consider solutions of several observables in different models and at different mass level truncations.
-  We then use Machine Learning (\ml) to predict the value of the observables at infinite mass level truncation, preferably in a model independent fashion.
-  That is we do not take as input the model which generated the data.
+  In the framework of open String Field Theory (\sft), we consider solutions of several observables in different models and at different finite mass level truncations.
+  We then use Machine Learning (\ml) to predict the value of the observables at infinite mass level truncation, preferably in a model independent fashion (that is we do not take as input the model which generated the data).
   The analysis can be found in the different branches of \href{https://github.com/thesfinox/ml-sft-trunc}{this GitHub repository}.
 
 \end{abstract}
