--- a/sec/conclusions.tex
+++ b/sec/conclusions.tex
@@ -1,6 +1,6 @@
 In the analysis we show that \ml techniques are indeed able to make accurate predictions on lumps and the \wzw model in \sft.
 In fact decision trees and \emph{ANN} models showed promising results on a model dependent basis (i.e.\ with knowledge of the underlying physics model).
-In principle it seems to also be possible to merge different datasets and produce meaningful predictions using \emph{ANN} models which displayed the best adaptivity to different datasets.
+In principle it seems to also be possible to merge different datasets and produce meaningful predictions using \emph{ANN} models (and \emph{r-SVR} in some cases) which displayed the best adaptivity to different datasets.
 
 It is still not clear whether it is possible to use algorithms trained on different datasets (even coming from diverse physical models) and make accurate predictions on different data, produced by a different physical model.
-In this case it might be necessary to use other techniques (such as stacking multiple models) to predict the labels.
+In this case it might be necessary to use other techniques (such as stacking multiple models or finding better engineered features) to predict the labels.
